--- a/index.html
+++ b/index.html
@@ -1,20 +1,31 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Sweetness - Discord Bot</title>
-  <link rel="stylesheet" href="sweet.css">
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="keywords" content="sweet sweetness bot discord server discordbot sweethelp sweetness бот сладость дискорд дискордбот помощь сладостьпомощь">
+    <meta name="description" content="discord bot sweetness">
+    <title>Sweetness - Discord Bot</title>
+    <link rel="stylesheet" href="/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap" rel="stylesheet">
 </head>
-<body class="bodys">
-<nav>
-<ul class="menu-main">
-<li><a href="sweetness.html" >SWEETNESS</a></li>
-<li><a href="sweet1.html" >Команды</a></li>
-<li><a href="sweet2.html">Контакты</a></li>
-<li><a href="sweet3.html">Помощь</a></li>
-</ul>
-</nav>
-Какой то текст с описанием преиществ сервера что найдешь у тд
+
+<body class="bodys" style="background: url(/images/Discord_stUGWMHXom.png);">
+    <nav>
+
+        <ul class="menu-main">
+            <li><a href="sweetness.html">SWEETNESS</a></li>
+            <li><a href="sweet1.html">Команды</a></li>
+            <li><a href="sweet2.html">Контакты</a></li>
+            <li><a href="sweet3.html">Помощь</a></li>
+        </ul>
+    </nav>
+    <h3>
+        <pre class="rainbow-animated">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis inventore nobis maxime repudiandae alias earum consequatur quos rerum sit quaerat iure distinctio voluptates, 
+        facere eaque voluptatum odio ad, consectetur atque!
+        </pre>
+    </h3>
 </body>
+
 </html>
