--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="keywords" content="sweet sweetness bot discord server discordbot sweethelp sweetness бот сладость дискорд дискордбот помощь сладостьпомощь">
     <meta name="description" content="discord bot sweetness">
     <title>Sweetness - Discord Bot</title>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap" rel="stylesheet">
 </head>
 
-<body class="bodys" style="background: url(/images/Discord_stUGWMHXom.png);">
+<body>
     <nav>
 
         <ul class="menu-main">
